--- a/Desafios part.2
+++ b/Desafios part.2
@@ -54,5 +54,45 @@
         
         console.log(minSoma, maxSoma);
     }
-
     
+//Birthday Cake Candles
+
+    function birthdayCakeCandles(candles) {
+        let maior = candles[0];
+        let contador = 0; 
+    
+        for (let i = 0; i < candles.length; i++) { 
+            if (candles[i] > maior) {
+                maior = candles[i]; 
+                contador = 1;
+            } else if (candles[i] === maior) {
+            contador++;
+            }
+        }
+        
+        return contador;
+    }
+
+//Grading Students
+    function gradingStudents(grades) {
+        // Write your code here
+        let notaAlunos= [];
+    
+        for (let i = 0; i < grades.length; i++) {
+            let nota = grades[i];
+    
+            if (nota < 38) {
+                notaAlunos.push(nota);
+            } else {
+                let proximoMultiploDe5 = nota + (5 - (nota % 5));
+    
+                if (proximoMultiploDe5 - nota < 3) {
+                    notaAlunos.push(proximoMultiploDe5);
+                } else {
+                    notaAlunos.push(nota);
+                }
+            }
+        }
+    
+        return notaAlunos;
+    }
